--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,12 @@
 	padding: 0;
 	border: none;
 }
-
+.btn {
+	@apply rounded-md py-1.5 px-4 cursor-pointer transition-all text-white bg-[#590DF2] font-bold;
+	&:disabled {
+		@apply bg-gray-600;
+	}
+}
 body,
 html {
 	width: 100%;
@@ -21,16 +26,4 @@ input {
 	border: 1px solid #000;
 	border-radius: 4px;
 	padding: 4px 12px;
-}
-
-button {
-	color: white;
-	border-radius: 4px;
-	padding: 6px 16px;
-	cursor: pointer;
-	display: block;
-	transition: all ease-in-out 0.3s;
-	&:hover {
-		background-color: purple;
-	}
 }
